# AI-Risk-Sentinel

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  test_db.py
data/taxonomies/: mit_taxonomy.json
frontend/src/: Dashboard.jsx
scripts/: demo_gap_detector.py  init_db.py
src/ai_risk_sentinel/: __init__.py
src/ai_risk_sentinel/agents/: __init__.py  hf_crawler.py
src/ai_risk_sentinel/api/: __init__.py
src/ai_risk_sentinel/core/: __init__.py  compliance_checker.py  gap_detector.py  risk_catalog.py
tests/: __init__.py  conftest.py  test_core.py
